--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
 
       <div class="gametype--selection">
-        <input data-action="startGame" data-gametype="cpu" type="button" id="newGameCPU" value="new game (vs cpu)">
+        <input data-action="startGame" data-gametype="cpu" type="button" id="newGameCPU" value="new game (vs cpu)" disabled>
         <input data-action="startGame" data-gametype="player" type="button" id="newGamePlayer"
           value="new game (vs player)">
       </div>
